# hrpsys-base

./: CMakeLists.txt
idl/: CMakeLists.txt  LimbTorqueControllerService.idl  RobotHardwareService.idl  StabilizerService.idl
lib/io/: iob.cpp  iob.h
lib/util/: BodyRTC.h
python/: rtm.py
rtc/: CMakeLists.txt
rtc/AutoBalancer/: AutoBalancer.cpp
rtc/EmergencyStopper/: EmergencyStopper.cpp  EmergencyStopper.h
rtc/LimbTorqueController/: CMakeLists.txt  LimbTorqueController.cpp  LimbTorqueController.h  LimbTorqueControllerComp.cpp  LimbTorqueControllerService_impl.cpp  LimbTorqueControllerService_impl.h  note.txt
rtc/RobotHardware/: RobotHardware.cpp  RobotHardware.h  RobotHardwareService_impl.cpp  RobotHardwareService_impl.h  robot.cpp  robot.h
rtc/SequencePlayer/: SequencePlayer.cpp  SequencePlayer.h  seqplay.cpp  seqplay.h
rtc/Stabilizer/: Stabilizer.cpp  Stabilizer.h  StabilizerService_impl.cpp  StabilizerService_impl.h
